# thesis-tracker

./: .dockerignore  .safety-policy.yml  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  continuous-integration.yml  release.yml  security-scan.yml  upload-logs.yml
src/: thesis_tracker.py
src/entity/: thesis.py
src/factory/: data_collector.py  data_processor.py  data_publisher.py
src/utils/: config.py  logger.py
tests/: test_thesis_tracker.py
tests/entity/: test_thesis.py
tests/factory/: test_data_collector.py  test_data_processor.py  test_data_publisher.py
tests/utils/: test_config.py  test_logger.py
