[tool.poetry]
name = "thesis-tracker"
version = "0.1.0"
description = "A Python-based project for collecting and analyzing metadata from French academic theses."
authors = ["Pierre Hanne <pierre.hanne@icloud.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/pierrehanne/thesis-tracker"
keywords = ["theses", "metadata", "academic", "NLP", "data-collection"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python"
]

[tool.poetry.dependencies]
python = "^3.11"
requests = ">=2.25.1,<3.0"
pandas = "^2.2.2"

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
flake8 = "^7.1.1"
black = "^24.8.0"
mypy = "^1.4.0"
isort = "^5.12.0"
bandit = "^1.7.0"
pre-commit = "^3.8.0"

[tool.poetry.extras]
dev = ["pytest", "flake8", "black", "mypy", "isort", "bandit", "pytest-cov", "pre-commit"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"